--- a/src/components/features.astro
+++ b/src/components/features.astro
@@ -33,11 +33,10 @@ const features = [
 
 <div class="mt-16 md:mt-0">
   <h2 class="text-4xl lg:text-5xl font-bold lg:tracking-tight">
-    "Access all features from the nav bar: chat, dashboard, blogs, and local needs."
+    "Connect, Explore, Engage, and Empower with Chat, Dashboard, Blogs, and Local Needs."
   </h2>
   <p class="text-lg mt-4 text-slate-600">
-    Astro comes batteries included. It takes the best parts of state-of-the-art
-    tools and adds its own innovations.
+    
   </p>
 </div>
 
