Update hero and navbar links

--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -27,7 +27,7 @@ import { Icon } from "astro-icon/components";
     <div class="mt-6 flex flex-col sm:flex-row gap-3">
       <Link
         href="#"
-        href="https://web3templates.com/templates/astroship-starter-website-template-for-astro"
+        href="https://github.com/MediMerge"
         target="_blank"
         class="flex gap-1 items-center justify-center"
         rel="noopener">
@@ -39,7 +39,7 @@ import { Icon } from "astro-icon/components";
         size="lg"
         style="outline"
         rel="noopener"
-        href="https://github.com/surjithctly/astroship"
+        href="https://github.com/MediMerge"
         class="flex gap-1 items-center justify-center"
         target="_blank">
         <Icon class="text-black w-4 h-4" name="bx:bxl-github" />
