--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -9,10 +9,10 @@ const menuitems = [
     title: "Features",
     path: "#",
     children: [
-      { title: "Action", path: "/" },
-      { title: "Another action", path: "#" },
-      { title: "Dropdown Submenu", path: "#" },
-      { title: "404 Page", path: "/404" },
+      { title: "Dashboard", path: "https://website-healthcare-six.vercel.app/" },
+      { title: "City Needs", path: "https://in-city-pro.vercel.app/" },
+      { title: "Chat Support System", path: "https://chat-kpmjee.vercel.app/" },
+    
     ],
   },
   
