--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -12,6 +12,9 @@ const menuitems = [
       { title: "Dashboard", path: "https://website-healthcare-six.vercel.app/" },
       { title: "City Needs", path: "https://in-city-pro.vercel.app/" },
       { title: "Chat Support System", path: "https://chat-kpmjee.vercel.app/" },
+      { title: "Medibase", path: "https://medibase.ohc.network/" },
+      { title: "Emergency Services Directory", path: "https://life.coronasafe.network/" },
+      { title: "Appointment System", path: "https://appointment-health.vercel.app/" },
     
     ],
   },
