--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -1,24 +1,26 @@
 ---
 import Container from "@components/container.astro";
-import Link from "@components/ui/link.astro";
+// import Link from "@components/ui/link.astro";
 import Dropdown from "./dropdown.astro";
 import { Astronav, MenuItems, MenuIcon } from "astro-navbar";
 
 const menuitems = [
+  {
+    title: "Emergency Contact",
+    path: "https://chat-kpmjee.vercel.app/",
+  },
   {
     title: "Features",
     path: "#",
     children: [
       { title: "Dashboard", path: "https://website-healthcare-six.vercel.app/" },
       { title: "City Needs", path: "https://in-city-pro.vercel.app/" },
-      { title: "Chat Support System", path: "https://chat-kpmjee.vercel.app/" },
+      { title: "Home Remedy", path: "https://natural-remedy.vercel.app/" },
       { title: "Medibase", path: "https://medibase.ohc.network/" },
       { title: "Emergency Services Directory", path: "https://life.coronasafe.network/" },
       { title: "Appointment System", path: "https://appointment-health.vercel.app/" },
-    
     ],
   },
-  
   {
     title: "About",
     path: "/about",
@@ -31,7 +33,6 @@ const menuitems = [
     title: "Contact",
     path: "/contact",
   },
-  
 ];
 ---
 
@@ -39,10 +40,9 @@ const menuitems = [
   <header class="flex flex-col lg:flex-row justify-between items-center my-5">
     <Astronav>
       <div class="flex w-full lg:w-auto items-center justify-between">
-        <a href="/" class="text-lg"
-          ><span class="font-bold text-slate-800">Medi</span><span
-            class="text-slate-500">Merge</span
-          >
+        <a href="/" class="text-lg">
+          <span class="font-bold text-slate-800">Medi</span>
+          <span class="text-slate-500">Merge</span>
         </a>
         <div class="block lg:hidden">
           <MenuIcon class="w-4 h-4 text-gray-800" />
@@ -50,38 +50,30 @@ const menuitems = [
       </div>
       <MenuItems class="hidden w-full lg:w-auto mt-2 lg:flex lg:mt-0">
         <ul class="flex flex-col lg:flex-row lg:gap-3">
-          {
-            menuitems.map((item, index) => (
-              <>
-                {item.children && (
-                  <Dropdown
-                    title={item.title}
-                    children={item.children}
-                    lastItem={index === menuitems.length - 1}
-                  />
-                )}
-
-                {!item.children && (
-                  <li>
-                    <a
-                      href={item.path}
-                      class="flex lg:px-3 py-2 items-center text-gray-600 hover:text-gray-900">
-                      <span> {item.title}</span>
-                      {item.badge && (
-                        <span class="ml-1 px-2 py-0.5 text-[10px] animate-pulse font-semibold uppercase text-white bg-indigo-600 rounded-full">
-                          New
-                        </span>
-                      )}
-                    </a>
-                  </li>
-                )}
-              </>
-            ))
-          }
+          {menuitems.map((item, index) => {
+            if (item.children) {
+              return (
+                <Dropdown
+                  title={item.title}
+                  children={item.children}
+                  lastItem={index === menuitems.length - 1}
+                />
+              );
+            } else {
+              return (
+                <li>
+                  <a
+                    href={item.path}
+                    class="flex lg:px-3 py-2 items-center text-gray-600 hover:text-gray-900">
+                    <span>{item.title}</span>
+                    
+                  </a>
+                </li>
+              );
+            }
+          })}
         </ul>
-        
       </MenuItems>
     </Astronav>
-    
   </header>
 </Container>
